Fix gap between articles on desktop

--- a/src/scss/layout/_mainContent.scss
+++ b/src/scss/layout/_mainContent.scss
@@ -38,7 +38,7 @@
       margin: rem(10) rem(0);
       max-width: 31.5%;
     }
-    @include tablet {
+    @include desktop {
       margin: rem(10) rem(0);
       max-width: 32.5%;
     }
